--- a/package.json
+++ b/package.json
@@ -8,11 +8,16 @@
     "metalsmith": "^2.1.0",
     "metalsmith-collections": "^0.7.0",
     "metalsmith-date-formatter": "^1.0.2",
+    "metalsmith-date-in-filename": "0.0.14",
+    "metalsmith-headings": "^0.1.0",
+    "metalsmith-inspect": "0.0.3",
+    "metalsmith-keymaster": "^0.1.0",
     "metalsmith-layouts": "^1.6.4",
     "metalsmith-markdown": "^0.2.1",
     "metalsmith-permalinks": "^0.5.0",
     "metalsmith-sass": "^1.3.0",
     "metalsmith-serve": "0.0.7",
+    "metalsmith-title": "0.0.1",
     "metalsmith-watch": "^1.0.1"
   }
 }
