--- a/package.json
+++ b/package.json
@@ -13,7 +13,7 @@
     "metalsmith-inspect": "0.0.3",
     "metalsmith-keymaster": "^0.1.0",
     "metalsmith-layouts": "^1.6.4",
-    "metalsmith-markdown": "^0.2.1",
+    "metalsmith-markdown-remarkable": "^0.1.1",
     "metalsmith-permalinks": "^0.5.0",
     "metalsmith-sass": "^1.3.0",
     "metalsmith-serve": "0.0.7",
